src2/objects/NES_Product_Type_Adjustment__mdt.object
<CustomObject>
    <fields>
        <fullName>NES_Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capsule</fullName>
                    <default>true</default>
                    <label>Capsule</label>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_Type_PrefLineItem__c</fullName>
        <label>Type PrefLineItem</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Product Type Adjustment</label>
    <pluralLabel>Products Type Adjustment</pluralLabel>
</CustomObject>